@@ -1,3 +1,11 @@
+2010-08-05  Richard Henderson  <rth@redhat.com>
+
+	PR 45189
+	* dwarf2out.c (DWARF2_UNWIND_INFO): Provide default definition.
+	(INCOMING_RETURN_ADDR_RTX): Likewise.
+	(dwarf2out_do_frame): Remove conditional compilation.
+	(dwarf2out_frame_init): Likewise.
+
 2010-08-05  Nicolas Setton  <setton@adacore.com>
 
 	* gcov.c (flag_display_progress): New static variable.
